<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/question_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/flashcardQuestion"
        android:gravity="center"
        android:text="@string/replace_the_question_here"
        android:textSize="40sp"
        android:background="@drawable/question_background"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"


        />


    <TextView
        android:id="@+id/flashcardAnswer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/replace_the_answer_here"
        android:textSize="40sp"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/answer_background"/>

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="560dp"
        android:contentDescription="@string/button_for_adding_cards"
        android:scaleType="fitCenter"
        android:visibility="visible"

        app:srcCompat="@drawable/add_icon" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/nextButton"
        android:src="@drawable/ic_iconmonstr_arrow_31"
        android:layout_marginStart="280dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/button_for_cycling_through_cards"

        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/trashButton"
        android:src="@drawable/delete_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/deletes_flashcard"
        />


</RelativeLayout>